# myproject

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  backup.jsonl  docker-compose.yml  phase-1.md  phase-2.md  phase-3.md  pyproject.toml  requirements.txt  sweeps.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
docs/: license_policy.md
scripts/: bench_search.py
src/: cgi.py
src/ingestion/: __init__.py  api.py  citations.py  cli.py  config.py  db.py  dedup.py  indexer.py  ingest.py  models.py  parser.py  parser_grobid.py  storage.py  summarizer.py  utils.py
src/ingestion/connectors/: __init__.py  arxiv.py  base.py  core.py  doaj.py  openalex.py  pmc.py  semanticscholar.py
src/ingestion/templates/: ui_search.html
tests/: conftest.py  test_api_compliance.py  test_api_search_query.py  test_citation_chain.py  test_connectors_conformance.py  test_ingestion_policy.py  test_parser_and_summary.py  test_phase2_basic.py
tests/cassettes/: connector_core.yaml  connector_doaj.yaml  connector_openalex.yaml  connector_pmc.yaml  connector_semanticscholar.yaml
